--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "swagger-jsdoc": "^6.2.8",
